grammar
()
!
+
|
^
=>


?

=

X

SYSTEM		: RULE* INITIAL_FACTS QUERIES


RULE		: EXPRESSION IMPLICATION CONCLUSION NEWLINE


	EXPRESSION	: XOR_EXPR ( ^ EXPRESSION )+

		XOR_EXPR	: OR_EXPR ( | XOR_EXPR )+

			OR_EXPR		: AND_EXPR ( + OR_EXPR )+

				AND_EXPR	: ( ! )* PAREN_EXPR

					PAREN_EXPR	: L_PAREN EXPRESSION R_PAREN
								| FACT


	IMPLICATION	: =>


	CONCLUSION	: AND_CONCL ( + CONCLUSION )+

		AND_CONCL	: FACT | ! FACT


INITIAL_FACTS: = ( FACT )* NEWLINE

QUERIES		 : ? ( FACT )* NEWLINE

A=>B

EXPRESSION IMPLICATION CONCLUSION
XOR_EXPR ..
OR_EXPR ..
AND_CONCL ..
PAREN_EXPR ..
FACT ..
A => AND_CONCL
..   FACT
..	 B
A => B




A+!(C^D)|E => F+ !G

EXPRESSION
XOR_EXPR
OR_EXPR | OR_EXPR
AND_EXPR + AND_EXPR | AND_EXPR
PAREN_EXPR + PAREN_EXPR | PAREN_EXPR
FACT + L_PAREN EXPRESSION R_PAREN | FACT
FACT + L_PAREN XOR_EXPR ^ XOR_EXPR R_PAREN | FACT
FACT + L_PAREN OR_EXPR ^ OR_EXPR R_PAREN | FACT
FACT + L_PAREN AND_EXPR ^ AND_EXPR R_PAREN | FACT
FACT + L_PAREN PAREN_EXPR ^ PAREN_EXPR R_PAREN | FACT
FACT + L_PAREN FACT ^ FACT R_PAREN | FACT




	CONCLUSION	: AND_CONCL ( + CONCLUSION )+

		AND_CONCL	: FACT | ! FACT


A=>B+!C+!!D

AND_CONCL(B) + CONCL(!C+!!D)
AND_CONCL(B) + AND_CONCL(C, False) + AND_CONCL(!D, False)
AND_CONCL(B) + AND_CONCL(C, False) + AND_CONCL(AND_CONCL(D, False), False)
